// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshots: should add color to text 1`] = `
<span
  className=""
  style={
    Object {
      "color": "red",
    }
  }
>
  Hola!
</span>
`;

exports[`Text Snapshots: should renders correctly 1`] = `
<span
  className=""
  style={
    Object {
      "color": "",
    }
  }
>
  Hola!
</span>
`;
